--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@ lerna-debug.log*
 .pnpm-debug.log*
 *.tsbuildinfo
 
-src/userplugins
+# src/userplugins
 
 ExtensionCache/
 settings/
+
+result
+.direnv
